--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -19,6 +19,11 @@
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav pull-right">
             <li class="d-flex align-items-center mx-2">
+                <a th:href="@{/users}">
+                    <button style="border:none !important" class="btn-link btn p-0">Users</button>
+                </a>
+            </li>
+            <li class="d-flex align-items-center mx-2">
                 <a th:href="@{'/create-user'}">
                     <button style="border:none !important" class="btn-link btn p-0">Sign Up</button>
                 </a>
@@ -33,11 +38,19 @@
                     <button style="border:none !important" class="btn-link btn p-0">Create</button>
                 </a>
             </li>
+
             <li class="d-flex align-items-center mx-2">
                 <a th:href="@{'/login?logout'}">
                     <button style="border:none !important" class="btn-link btn p-0">Logout</button>
                 </a>
             </li>
+
+<!--            <li th:if="${post.user.id == userId}" class="d-flex align-items-center mx-2">-->
+<!--                <a th:href="@{'/login?logout'}">-->
+<!--                    <button style="border:none !important" class="btn-link btn p-0">Logout</button>-->
+<!--                </a>-->
+<!--            </li>-->
+
 <!--            <li class="d-flex align-items-center mx-2" th:if="${#authorization.expression('isAuthenticated()')}">-->
 <!--                <a th:href="@{'/login?logout'}">-->
 <!--                    <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>&nbsp;Logout-->
