--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -8,13 +8,15 @@
 
 <nav th:fragment="navbar" class="navbar navbar-inverse navbar-fixed-top  mt-auto">
     <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
+<!--        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">-->
+<!--            <span class="icon-bar"><a class="navbar-brand align-items-center" href="/">home</a></span>-->
+<!--            <span class="icon-bar"><a class="navbar-brand align-items-center" href="/">home</a></span>-->
+<!--            <span class="icon-bar"><a class="navbar-brand align-items-center" href="/">home</a></span>-->
+<!--        </button>-->
         <a class="navbar-brand align-items-center" href="/">home</a>
-
+        <a th:href="@{/about}">
+            <button style="border:none !important" class="btn-link btn p-0">About</button>
+        </a>
     </div>
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav pull-right">
