--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <nav th:include="partials/navbar :: navbar"></nav>
-<h1> this is a home page!</h1>
+<h1> This is a home page!</h1>
 
 
 
