--- a/src/main/resources/templates/partials/head.html
+++ b/src/main/resources/templates/partials/head.html
@@ -1,27 +1,11 @@
-<!--<!DOCTYPE html>-->
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<!--<head th:fragment="head(title)">-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title th:text=""-->
-<!--</head>-->
-
-
-<!--<body>-->
-
-<!--</body>-->
-<!--links for head-->
 <th:block th:fragment="head">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" -->
-<!--          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
-<!--    <link rel="stylesheet" href="/css/springblog.css">-->
-<!--    <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
-
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/css/springblog.css">
+    <link rel="stylesheet" href="/css/openhelp.css">
     <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<!--    <link rel="stylesheet" href="/static/css/springblog.css">-->
+
 
 </th:block>
