--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -8,11 +8,6 @@
 
 <nav th:fragment="navbar" class="navbar navbar-inverse navbar-fixed-top  mt-auto">
     <div class="navbar-header">
-<!--        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">-->
-<!--            <span class="icon-bar"><a class="navbar-brand align-items-center" href="/">home</a></span>-->
-<!--            <span class="icon-bar"><a class="navbar-brand align-items-center" href="/">home</a></span>-->
-<!--            <span class="icon-bar"><a class="navbar-brand align-items-center" href="/">home</a></span>-->
-<!--        </button>-->
         <a class="navbar-brand align-items-center" href="/">home</a>
         <a th:href="@{/about}">
             <button style="border:none !important" class="btn-link btn p-0">About</button>
@@ -20,6 +15,11 @@
     </div>
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav pull-right">
+            <li class="d-flex align-items-center mx-2">
+                <a th:href="@{/home}">
+                    <button style="border:none !important" class="btn-link btn p-0">Home</button>
+                </a>
+            </li>
             <li class="d-flex align-items-center mx-2">
                 <a th:href="@{/users}">
                     <button style="border:none !important" class="btn-link btn p-0">Users</button>
@@ -46,24 +46,10 @@
                     <button style="border:none !important" class="btn-link btn p-0">Logout</button>
                 </a>
             </li>
-
-<!--            <li th:if="${post.user.id == userId}" class="d-flex align-items-center mx-2">-->
-<!--                <a th:href="@{'/login?logout'}">-->
-<!--                    <button style="border:none !important" class="btn-link btn p-0">Logout</button>-->
-<!--                </a>-->
-<!--            </li>-->
-
-<!--            <li class="d-flex align-items-center mx-2" th:if="${#authorization.expression('isAuthenticated()')}">-->
-<!--                <a th:href="@{'/login?logout'}">-->
-<!--                    <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>&nbsp;Logout-->
-<!--                </a>-->
-<!--                <form style="visibility: hidden" id="form" method="post" action="#" th:action="@{/logout}"></form>-->
-<!--            </li>-->
         </ul>
     </div><!--/.nav-collapse -->
 
 </nav>
-
 <div class="mt-auto" th:fragment="footer">
     Footer
 </div>
