--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,10 +6,39 @@
     <title>Home</title>
 </head>
 <body>
-<nav th:include="partials/navbar :: navbar"></nav>
-<h1> This is a home page!</h1>
+<!--<nav th:include="partials/navbar :: navbar"></nav>-->
+<div class="container">
+
+<h1> Coming Soon, I promise!</h1>
+    <div class="card aboutcard mx-2">
+
+        <img class="card-img-top headshot mx-auto" src="images/roger-headshot.jpg" alt="Card image cap">
+
+        <div class="card-body">
+            <h1 class="card-title center">Roger Mayer</h1>
+        </div>
+        <ul class="aboutlinksUL d-flex  justify-content-center">
+            <li>
+                <a class="whoIs-links" href="https://github.com/roger-mayer" target="_blank"><i
+                        class="fab fa-github-square fa-3x"></i></a>
+            </li>
+            <li>
+                <a class="whoIs-links" href="https://alumni.codeup.com/students/754" target="_blank"><img
+                        class="abtcodeuplogo" src="images/codeup-logo.png"></a>
+            </li>
+            <li>
+                <a class="whoIs-links" href="https://www.linkedin.com/in/roger-mayer/" target="_blank"><i
+                        class="fab fa-linkedin fa-3x"></i></a>
+            </li>
+        </ul>
+    </div>
 
 
 
+
+
+
+
+</div>
 </body>
 </html>
