pushing to production

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
     <h1> Coming Soon, I promise!</h1>
     <div class="card aboutcard mx-2">
 
-        <img class="card-img-top headshot mx-auto" src="images/roger-headshot.jpg" alt="Card image cap">
+<!--        <img class="card-img-top headshot mx-auto" src="images/roger-headshot.jpg" alt="Card image cap">-->
 
         <div class="card-body">
             <h1 class="card-title center">Roger Mayer</h1>
