working on deployment

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,10 +21,10 @@
                 <a class="whoIs-links" href="https://github.com/roger-mayer" target="_blank"><i
                         class="fab fa-github-square fa-3x"></i></a>
             </li>
-            <li>
-                <a class="whoIs-links" href="https://alumni.codeup.com/students/754" target="_blank"><img
-                        class="abtcodeuplogo" src="images/codeup-logo.png"></a>
-            </li>
+<!--            <li>-->
+<!--                <a class="whoIs-links" href="https://alumni.codeup.com/students/754" target="_blank"><img-->
+<!--                        class="abtcodeuplogo" src="images/codeup-logo.png"></a>-->
+<!--            </li>-->
             <li>
                 <a class="whoIs-links" href="https://www.linkedin.com/in/roger-mayer/" target="_blank"><i
                         class="fab fa-linkedin fa-3x"></i></a>
