--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,28 +9,28 @@
 <div class="container">
 
     <h1> Coming Soon, I promise!</h1>
-    <div class="card aboutcard mx-2">
+<!--    <div class="card aboutcard mx-2">-->
 
-<!--        <img class="card-img-top headshot mx-auto" src="images/roger-headshot.jpg" alt="Card image cap">-->
+<!--&lt;!&ndash;        <img class="card-img-top headshot mx-auto" src="images/roger-headshot.jpg" alt="Card image cap">&ndash;&gt;-->
 
-        <div class="card-body">
-            <h1 class="card-title center">Roger Mayer</h1>
-        </div>
-        <ul class="aboutlinksUL d-flex  justify-content-center">
-            <li>
-                <a class="whoIs-links" href="https://github.com/roger-mayer" target="_blank"><i
-                        class="fab fa-github-square fa-3x"></i></a>
-            </li>
+<!--        <div class="card-body">-->
+<!--            <h1 class="card-title center">Roger Mayer</h1>-->
+<!--        </div>-->
+<!--        <ul class="aboutlinksUL d-flex  justify-content-center">-->
 <!--            <li>-->
-<!--                <a class="whoIs-links" href="https://alumni.codeup.com/students/754" target="_blank"><img-->
-<!--                        class="abtcodeuplogo" src="images/codeup-logo.png"></a>-->
+<!--                <a class="whoIs-links" href="https://github.com/roger-mayer" target="_blank"><i-->
+<!--                        class="fab fa-github-square fa-3x"></i></a>-->
 <!--            </li>-->
-            <li>
-                <a class="whoIs-links" href="https://www.linkedin.com/in/roger-mayer/" target="_blank"><i
-                        class="fab fa-linkedin fa-3x"></i></a>
-            </li>
-        </ul>
-    </div>
+<!--&lt;!&ndash;            <li>&ndash;&gt;-->
+<!--&lt;!&ndash;                <a class="whoIs-links" href="https://alumni.codeup.com/students/754" target="_blank"><img&ndash;&gt;-->
+<!--&lt;!&ndash;                        class="abtcodeuplogo" src="images/codeup-logo.png"></a>&ndash;&gt;-->
+<!--&lt;!&ndash;            </li>&ndash;&gt;-->
+<!--            <li>-->
+<!--                <a class="whoIs-links" href="https://www.linkedin.com/in/roger-mayer/" target="_blank"><i-->
+<!--                        class="fab fa-linkedin fa-3x"></i></a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </div>-->
 </div>
 </body>
 </html>
